fixed footer spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
+@keyframes fade-out {
+    from {
+        opacity: 100%;
+    }
+    to {
+        opacity: 0%;
+    }
+}
+  
+@keyframes fade-in {
+    from {
+        opacity: 0%;
+    }
+    to {
+        opacity: 100%;
+    }
+}
+
 :root {
     --background-color: #2A2A2A;
 
@@ -347,4 +365,6 @@ p.footer-subtitle {
     font-weight: 400;
     font-style: normal;
     font-size: 16px;
+
+    margin-top: -10px;
 }
